--- a/Maui/SimpleWeather.Maui.AppWidget/SimpleWeather/Info.plist
+++ b/Maui/SimpleWeather.Maui.AppWidget/SimpleWeather/Info.plist
@@ -2,11 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.weatherkit</key>
-	<true/>
-	<key>com.apple.security.application-groups</key>
+	<key>INIntentsSupported</key>
 	<array>
-		<string>group.com.thewizrd.simpleweather.debug</string>
+		<string>WeatherWidgetConfigurationIntent</string>
+	</array>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>WeatherWidgetConfigurationIntent</string>
 	</array>
 </dict>
 </plist>
