--- a/Maui/SimpleWeather.Maui.AppWidget/widgetintentExt/widgetintentExt.entitlements
+++ b/Maui/SimpleWeather.Maui.AppWidget/widgetintentExt/widgetintentExt.entitlements
@@ -2,11 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.weatherkit</key>
+	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.thewizrd.simpleweather.debug</string>
+		<string>group.com.thewizrd.simpleweather</string>
 	</array>
 </dict>
 </plist>
