--- a/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
@@ -10,5 +10,9 @@
 	<true/>
 	<key>com.apple.developer.weatherkit</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.thewizrd.simpleweather.debug</string>
+	</array>
 </dict>
 </plist>
