--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,14 +5,8 @@
 			"label": "MauiBuildDebug",
 			"dependsOrder": "sequence",
 			"dependsOn": [
-				"keyCheckShared",
-				"keyCheckWApi",
-				"editManifestInfoiOSDebug",
-				"editManifestEntitlementsiOSDebug",
-				"editManifestInfoMacDebug",
-				"editManifestEntitlementsMacDebug",
-				"dotnet: restore",
-				"cleanDebug",
+				"prepareMauiDebug",
+				"restore",
 				"maui: Build"
 			]
 		},
@@ -20,105 +14,29 @@
 			"label": "MauiBuildRelease",
 			"dependsOrder": "sequence",
 			"dependsOn": [
-				"keyCheckShared",
-				"keyCheckWApi",
-				"editManifestInfoiOSRelease",
-				"editManifestEntitlementsiOSRelease",
-				"editManifestInfoMacRelease",
-				"editManifestEntitlementsMacRelease",
+				"cleanMauiAppWidgets",
+				"prepareMauiRelease",
 				"restore",
 				"cleanRelease",
 				"maui: Build"
 			]
 		},
 		{
-			"label": "keyCheckShared",
+			"label": "prepareMauiDebug",
 			"type": "shell",
-			"command": "KeyCheck/bin/Release/net7.0/publish/KeyCheck SimpleWeather.Shared/Keys",
+			"command": "bash maui-preparebuild.sh \"Debug\"",
 			"group": "build",
 			"options": {
 				"cwd": "${workspaceFolder}"
 			}
 		},
 		{
-			"label": "keyCheckWApi",
+			"label": "prepareMauiRelease",
 			"type": "shell",
-			"command": "KeyCheck/bin/Release/net7.0/publish/KeyCheck SimpleWeather.Weather-API/Keys",
+			"command": "bash maui-preparebuild.sh \"Release\"",
 			"group": "build",
 			"options": {
 				"cwd": "${workspaceFolder}"
-			}
-		},
-		{
-			"label": "editManifestInfoiOSDebug",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/iOS/Info.plist \"Debug\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
-			}
-		},
-		{
-			"label": "editManifestInfoMacDebug",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/MacCatalyst/Info.plist \"Debug\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
-			}
-		},
-		{
-			"label": "editManifestEntitlementsiOSDebug",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/iOS/Entitlements.plist \"Debug\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
-			}
-		},
-		{
-			"label": "editManifestEntitlementsMacDebug",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/MacCatalyst/Entitlements.plist \"Debug\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
-			}
-		},
-		{
-			"label": "editManifestInfoiOSRelease",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/iOS/Info.plist \"Release\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
-			}
-		},
-		{
-			"label": "editManifestInfoMacRelease",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/MacCatalyst/Info.plist \"Release\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
-			}
-		},
-		{
-			"label": "editManifestEntitlementsiOSRelease",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/iOS/Entitlements.plist \"Release\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
-			}
-		},
-		{
-			"label": "editManifestEntitlementsMacRelease",
-			"type": "shell",
-			"command": "../../EditManifest/bin/Release/net7.0/publish/EditManifest Platforms/MacCatalyst/Entitlements.plist \"Release\"",
-			"group": "build",
-			"options": {
-				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
 			}
 		},
 		{
@@ -149,6 +67,16 @@
 			"group": "build",
 			"options": {
 				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui/"
+			}
+		},
+		{
+			"label": "cleanMauiAppWidgets",
+			"type": "shell",
+			"command": "xcodebuild clean; rm -rf DerivedData",
+			"problemMatcher": [ "$msCompile" ],
+			"group": "build",
+			"options": {
+				"cwd": "${workspaceFolder}/Maui/SimpleWeather.Maui.AppWidget/"
 			}
 		}
 	]
