--- a/Maui/SimpleWeather.Maui.AppWidget/widgetintentExt/widgetintentExtDebug.entitlements
+++ b/Maui/SimpleWeather.Maui.AppWidget/widgetintentExt/widgetintentExtDebug.entitlements
@@ -8,5 +8,7 @@
 	<array>
 		<string>group.com.thewizrd.simpleweather.debug</string>
 	</array>
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
