maui: fix publishing issues

--- a/Maui/SimpleWeather.Maui/Platforms/iOS/Info.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/iOS/Info.plist
@@ -14,7 +14,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>SimpleWeather</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.thewizrd.simpleweather.debug</string>
+	<string>com.thewizrd.simpleweather</string>
 	<key>CFBundleName</key>
 	<string>SimpleWeather</string>
 	<key>LSRequiresIPhoneOS</key>
