--- a/Maui/SimpleWeather.Maui.AppWidget/widgetExtension/widgetExtension.entitlements
+++ b/Maui/SimpleWeather.Maui.AppWidget/widgetExtension/widgetExtension.entitlements
@@ -2,13 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>application-identifier</key>
+	<string>F5MCLX6AR8.com.thewizrd.simpleweather.widget</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.thewizrd.simpleweather</string>
 	</array>
-	<key>com.apple.security.network.client</key>
-	<true/>
 </dict>
 </plist>
