--- a/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
@@ -12,7 +12,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.thewizrd.simpleweather.debug</string>
+		<string>group.com.thewizrd.simpleweather</string>
 	</array>
 </dict>
 </plist>
