--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -16,6 +16,8 @@
 
 	<PropertyGroup>
 		<DefineConstants Condition="'$(_TargetPlatformIsWindows)' == 'True'">$(DefineConstants);WINDOWS</DefineConstants>
+    <UseRidGraph Condition="'$(_TargetPlatformIsWindows)' == 'True'">true</UseRidGraph>
+    <RuntimeIdentifiers Condition="'$(_TargetPlatformIsWindows)' == 'True'">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
 	</PropertyGroup>
 
 	<!-- Build acceleration -->
