--- a/MauiUnitTestProject/MauiUnitTestProject.csproj
+++ b/MauiUnitTestProject/MauiUnitTestProject.csproj
@@ -29,6 +29,9 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 		<DefineConstants>$(DefineConstants);UNIT_TEST</DefineConstants>
 	</PropertyGroup>
+  <PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">
+    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
     <RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
     <CreatePackage>false</CreatePackage>
