--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -61,9 +61,9 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.Json" Version="8.0.1" />
     <PackageReference Include="TimberLog" Version="1.0.0" />
-    <PackageReference Include="ZCS.Utf8Json" Version="1.4.5" />
     <PackageReference Condition="$(TargetFramework.Contains('windows'))" Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="ZCS.DataContractResolver" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup Condition="!$(TargetFramework.Contains('windows'))">
     <PackageReference Include="CommunityToolkit.Maui.Core" Version="7.0.1" />
