--- a/SimpleWeather.BackgroundTasks/SimpleWeather.BackgroundTasks.csproj
+++ b/SimpleWeather.BackgroundTasks/SimpleWeather.BackgroundTasks.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231219000" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="$(WinAppSDKVersion)" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
   </ItemGroup>
 
